@@ -2,7 +2,6 @@ package org.labcabrera.sample.archetype.shared.infrastructure.persistence.rsql;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.springframework.data.jpa.domain.Specification;
 
@@ -14,11 +13,11 @@ import cz.jirutka.rsql.parser.ast.Node;
 public class GenericRsqlSpecBuilder<T> {
 
     public Specification<T> createSpecification(Node node) {
-        if (node instanceof LogicalNode) {
-            return createSpecification((LogicalNode) node);
+        if (node instanceof LogicalNode logicalNode) {
+            return createSpecification(logicalNode);
         }
-        if (node instanceof ComparisonNode) {
-            return createSpecification((ComparisonNode) node);
+        if (node instanceof ComparisonNode comparisonNode) {
+            return createSpecification(comparisonNode);
         }
         return null;
     }
@@ -26,9 +25,9 @@ public class GenericRsqlSpecBuilder<T> {
     public Specification<T> createSpecification(LogicalNode logicalNode) {
         List<Specification<T>> specs = logicalNode.getChildren()
             .stream()
-            .map(node -> createSpecification(node))
+            .map(this::createSpecification)
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
 
         Specification<T> result = specs.get(0);
         if (logicalNode.getOperator() == LogicalOperator.AND) {
@@ -46,7 +45,7 @@ public class GenericRsqlSpecBuilder<T> {
     }
 
     public Specification<T> createSpecification(ComparisonNode comparisonNode) {
-        return new GenericRsqlSpecification<T>(
+        return new GenericRsqlSpecification<>(
             comparisonNode.getSelector(),
             comparisonNode.getOperator(),
             comparisonNode.getArguments());
